fix broken display of presentation on mobile views

--- a/docs/assets/css/detail-2.scss
+++ b/docs/assets/css/detail-2.scss
@@ -311,10 +311,10 @@ body {
         }
     }
     @include max-yatayTablet {
-        margin-bottom: 40px;
+        padding-bottom: 60px;
     }
     @include max-dikeyTablet {
-        margin-bottom: 90px;
+        padding-bottom: 120px;
     }
 }
 pre.code-view {
